kube/config/rpc-workers.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: anubis-rpc-workers
  namespace: anubis

spec:
  selector:
    matchLabels:
      app: anubis-rpc-workers
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: anubis-rpc-workers
    spec:
      serviceAccountName: pipeline-rpc
      dnsPolicy: ClusterFirst
      containers:
      - name: anubis-rpc-worker
        image: registry.osiris.services/anubis/api:v2.0.0-alpha
        imagePullPolicy: Always
        command:
        - "rq"
        - "worker"
        - "-u"
        - "redis://redis"
