kube/config/elk.yml
## Logstash
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: anubis

spec:
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
        ecosystem: elk
    spec:
      containers:
      - name: logstash
        image: registry.osiris.services/anubis/logstash:latest
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 5000
        - name: api
          containerPort: 9600

---

## Elasticsearch
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: anubis

spec:
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
        ecosystem: elk
    spec:
      containers:
      - name: elasticsearch
        image: elasticsearch:7.5.2
        resources:
          limits:
            memory: "2Gi"
          requests:
            memory: "2Gi"
        ports:
        - name: web
          containerPort: 9200
        volumeMounts:
        - name: elastic-data
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: elastic-data
        persistentVolumeClaim:
          claimName: elastic-data
---
## kibana
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: anubis

spec:
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
        ecosystem: elk
    spec:
      containers:
      - name: kibana
        image: kibana:7.5.2
        ports:
        - name: web
          containerPort: 5601

---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: anubis
  labels:
    app: logstash
spec:
  selector:
    app: logstash
  ports:
  - name: logstash
    protocol: UDP
    port: 5000
    targetPort: 5000
  - name: api
    port: 9600
    targetPort: 9600

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: anubis
  labels:
    app: elasticsearch
spec:
  type: NodePort
  selector:
    app: elasticsearch
  ports:
  - name: web
    port: 9200
    targetPort: 9200

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: anubis
  labels:
    app: kibana
spec:
  type: NodePort
  selector:
    app: kibana
  ports:
  - name: web
    port: 5601
    targetPort: 5601

---
