kube/config/web-static.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: anubis

spec:
  selector:
    matchLabels:
      app: web
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: web
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: web
        image: registry.osiris.services/anubis/web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 80
        livenessProbe:
          exec:
            command:
              - curl
              - http://localhost/
          initialDelaySeconds: 30
          periodSeconds: 5

---

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: anubis
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - name: web
    port: 80
    targetPort: 80
